# gim

./: .clang-format  .clangd  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  compileGLSL.cmake  selene.toml  vcpkg.json  xmake.lua  xmake.yml
.github/workflows/: linux_amd64.yml  test.yml
cmake/: android.cmake  compileGLSL.cmake  memory-safety.cmake  windows-toolchain.cmake
include/gim/: engine.hpp.in
include/gim/ecs/: README.md  component_array.hpp  component_manager.hpp  ecs.hpp  entity_manager.hpp  signature.hpp  system_manager.hpp  testing.hpp
include/gim/ecs/components/: camera.hpp  cube-shader.hpp  engine-state.hpp  shader-base.hpp  shader.hpp  triangle-shader.hpp  vertex.hpp
include/gim/ecs/components/renderer/: graph.hpp
include/gim/ecs/engine/: component_array.hpp  component_manager.hpp  entity_manager.hpp  signature.hpp  system_manager.hpp  testing.hpp
include/gim/ecs/systems/: vulkan.hpp
include/gim/svo/: svo.hpp
include/gim/vulkan/: init.hpp  instance.hpp  utils.hpp  vulkan.hpp
include/wtu/ecs/: component-array.hpp  constants.hpp  entity-manager.hpp
shaders/: README.md  default.frag  default.vert  triangle.frag  triangle.vert  voxel.comp
src/ecs/: README.md  component_array.cpp  entity_manager.cpp  test_component_array.cpp  test_component_manager.cpp  test_ecs.cpp  test_entity_manager.cpp  test_signature.cpp  test_system_manager.cpp
src/ecs/systems/: vulkan.cpp
src/svo/: svo.cpp
src/testing/: CMakeLists.txt
src/vulkan/: utils.cpp  vulkan.cpp
